# exam-intelligence

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  usage.md
scripts/: setup.sh
src/: __init__.py  config.py
src/agents/: __init__.py  workflow.py
src/generator/: __init__.py  review.py
src/graph/: __init__.py  knowledge_graph.py
src/ingestion/: __init__.py  loader.py
src/retrieval/: __init__.py  vectorstore.py
src/ui/: __init__.py  main.py
tests/: test_core.py
