[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exam-intelligence"
version = "0.2.0"
description = "AI 驱动的考研备考系统 — 基于本地 LLM + 知识图谱 + RAG"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "peng38159-eng" },
]
keywords = [
    "kaoyan",
    "rag",
    "knowledge-graph",
    "llm",
    "langgraph",
    "chromadb",
    "exam-preparation",
    "education",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "streamlit>=1.30",
    "chromadb>=0.5.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",
    "pymupdf>=1.23.0",
    "langchain-ollama>=0.1.0",
    "langchain-community>=0.2.0",
    "sentence-transformers>=3.0.0",
    "networkx>=3.3",
    "spacy>=3.7",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.5.0",
]
ollama = [
    "ollama>=0.4.0",
]

[project.scripts]
exam-intelligence = "src.ui.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["src*"]
